[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "parsec-cli"
publish.workspace = true
repository.workspace = true
version.workspace = true
autotests = false

[[bench]]
name = "minimal_short_id"
harness = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[features]
use-libsodium = ["libparsec_crypto/use-libsodium"]
vendored-openssl = ["libparsec_crypto/vendored-openssl"]
vendored-dbus = ["libparsec/vendored-dbus"]
testenv = []

[dependencies]
libparsec = { workspace = true }
libparsec_crypto = { workspace = true }
libparsec_client = { workspace = true }
libparsec_client_connection = { workspace = true }
libparsec_platform_ipc = { workspace = true }
libparsec_platform_mountpoint = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["default", "derive", "env"] }
# `termination` feature enable handling of SIGHUP/SIGTERM on top of SIGINT
ctrlc = { workspace = true, features = ["termination"] }
dialoguer = { workspace = true, features = ["fuzzy-select"] }
env_logger = { workspace = true, features = ["auto-color", "humantime", "regex", "kv"] }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rpassword = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
spinners = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
url = { workspace = true, optional = true }
uuid = { workspace = true }
itertools = { workspace = true, features = ["use_std"] }
thiserror = { workspace = true }

[dev-dependencies]
libparsec = { workspace = true, features = ["cli-tests"] }
libparsec_tests_fixtures = { workspace = true }
parsec-cli = { path = ".", features = ["testenv"] }

assert_cmd = { workspace = true }
predicates = { workspace = true, features = ["regex"] }
rstest = { workspace = true }
uuid = { workspace = true, features = ["v6", "std", "rng"] }

criterion = { workspace = true }

[target.'cfg(target_family = "unix")'.dev-dependencies]
# rexpect doesn't support Windows (see https://github.com/rust-cli/rexpect/issues/11)
rexpect = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winfsp_wrs_build = { workspace = true }
