[project]
name = "parsec-docs"
version = "0.0.0"
description = "Parsec documentation"
authors = [{ name = "Scille SAS", email = "contact@scille.fr" }]
license = "BUSL-1.1"
requires-python = "~=3.12.0"
dependencies = [
    "Sphinx>=9.0.0, <10",
    "sphinx-copybutton>=0.5.2, <0.6",
    "sphinx-intl>=2.3.1, <3",
    "sphinx-lint>=1.0.2, <2",
    "sphinx-mermaid>=0.0.8, <0.1",
    "sphinx-rtd-theme>=3.1.0, <4",
    "sphinx-tabs>=3.4.7, <4",
    "docutils==0.21.2",
    "powrap>=1.0.2, <2",
]

[tool.poetry]
packages = [{ include = "conf.py" }]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
