[package]
name = "parsec"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "parsec"
crate-type = ["cdylib"]

[features]
default = ["gil-refs"]
# FIXME: create_exception gen code gated behind feature `gil-refs` causing warning about unexpected feature
# https://github.com/PyO3/pyo3/issues/4743
# Should be fixed in pyo3@0.23
gil-refs = ["pyo3/gil-refs"]
# Remember kid: RustCrypto is used if `use-sodiumoxide` is not set !
use-sodiumoxide = ["libparsec_crypto/use-sodiumoxide"]
vendored-openssl = ["libparsec_crypto/vendored-openssl"]
test-utils = ["dep:libparsec_testbed", "libparsec_types/test-mock-time", "pyo3/py-clone"]

[dependencies]
libparsec_crypto = { workspace = true }
libparsec_protocol = { workspace = true }
libparsec_serialization_format = { workspace = true, features = ["python-bindings-support"] }
libparsec_types = { workspace = true }
libparsec_testbed = { workspace = true, optional = true }

regex = { workspace = true, features = ["std", "perf", "unicode"] }
paste = { workspace = true }
pyo3 = { workspace = true, features = [
    "multiple-pymethods",
    "extension-module",
    "macros",
    "gil-refs",
] }
uuid = { workspace = true, features = ["serde", "v4", "fast-rng"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
lazy_static = { workspace = true }
futures = { workspace = true, features = ["std", "async-await", "executor"] }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }

[build-dependencies]
glob = { workspace = true }
