[project]
name = "parsec-cloud"
version = "3.7.2-a.0+dev"
description = "Secure file sharing in the cloud"
authors = [{ name = "Scille SAS", email = "contact@scille.fr" }]
license = "BUSL-1.1"
readme = "./pypi-readme.md"
keywords = ["parsec", "cryptography", "sharing", "encryption"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
]
requires-python = "~=3.12.0"
dependencies = [
    # Base requirements
    "anyio>=3.7.1, <4",
    "click>=8.0, <9",
    "httpx>=0.28.1, <0.29",
    "pbr>=6.1.1, <7",
    "pydantic>=2.12.4, <3",
    "pydantic-core>=2.41.5, <3",
    "sentry-sdk>=2.30.0, <3",
    "starlette>=0.49.3, <1",
    "structlog>=25.4.0, <26",
    # ASGI server
    "fastapi>=0.121.2, <1",
    "uvicorn>=0.35.0, <0.36",
    "jinja2>=3.0, <4",
    # PostgreSQL
    "asyncpg>=0.29.0, <0.30",
    # S3
    "boto3>=1.38, <2",
    "botocore>=1.38, <2",
    # Swift
    "python-swiftclient>=4.8.0, <5",
]

[project.scripts]
parsec = "parsec.cli:cli"

[project.urls]
homepage = "https://github.com/Scille/parsec-cloud"
documentation = "https://docs.parsec.cloud"

[tool.poetry]
packages = [{ include = "parsec" }]
exclude = []
include = [
    { path = "parsec/_parsec*.so", format = "wheel" },  # Rust lib for Linux & MacOS
    { path = "parsec/_parsec*.pyd", format = "wheel" }, # Rust lib for Windows
]

# NOTE: poetry 2.2.0 supports [dependency-groups] (PEP 735) but it is not yet supported by
#       dependabot. See https://github.com/dependabot/dependabot-core/issues/10847
[tool.poetry.group.dev.dependencies]
# build
cibuildwheel = "^3.0.0"
maturin = "^1.9.5"
patchelf = { version = "^0.17.2.4", markers = "platform_system=='Linux'" }
setuptools = "^82.0.0"
# lint
deptry = "^0.24.0"
editorconfig-checker = "^3.2.1"
pyright = "^1.1.353"
ruff = "^0.15.0"
sqlfluff = "^4.0.0"
# test
httpx-sse = "^0.4.1"
pytest = "^9.0.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"
pytest-rerunfailures = "^16.0"
pytest-timeout = "^2.2.0"
pytest-xdist = "^3.1"
trustme = "^1.2.1"
# type-stubs
asyncpg-stubs = "^0.29.1"
boto3-stubs = "^1.40.45"
types-requests = "^2.32.4"
# other dependencies
poetry-lock-package = "^0.5.2"

[tool.poetry.group.testbed-server]
optional = true

[tool.poetry.group.testbed-server.dependencies]
psutil = "^7.0.0"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.8" # provides poetry export

[tool.cibuildwheel]
build = "cp312-{manylinux,macos,win}*"
archs = ["auto64"]
build-verbosity = 3
before-all = "bash {project}/misc/setup-rust.sh"
before-build = "python -m pip install -U pip"
test-command = "parsec --version"

[tool.cibuildwheel.linux]
# perl-IPC-Cmd needed to build openssl
before-all = "yum install -y perl-IPC-Cmd && bash {project}/misc/setup-rust.sh"

[tool.cibuildwheel.environment]
# As its name suggests, `misc/setup-rust.sh` (run during cibuildwheel's before-all) will
# install Rust if it is not already available. In this case, Rust bin dir was previously
# non-existent and hence $PATH don't know about it (and maturin will fail when calling cargo).
# For this reason we force $PATH to contain Rust bin dir.
PATH = "$PATH:$HOME/.cargo/bin"
# A wheel cannot make assumption on the host it is going to run on, hence it
# has to bundle any extra shared libraries dependencies (so in our case openssl)
LIBPARSEC_FORCE_VENDORED_OPENSSL = "true"

[tool.deptry]
extend_exclude = ["server/tests/", "server/parsec/cli/testbed.py"]


[tool.maturin]
module-name = "parsec._parsec"
bindings = "pyo3"

# Per-module customization

[tool.pyright]
pythonVersion = "3.12"
include = ["parsec", "tests", "build.py", "../docs", "../misc", "../bindings/generator"]
exclude = ["**/__pycache__", "../**/.venv/"]
ignore = [
    "parsec/components/postgresql/sequester.py",
    "tests/cli/test_migrate.py",
    "tests/cli/common.py",
    "tests/cli/test_sequester.py",
    "../misc/bench.py",
]
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportUnusedCallResult = "none"
reportUnusedCoroutine = true
reportUnusedExcept = true
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = "information"
reportMatchNotExhaustive = true
reportAssertAlwaysTrue = "information"
reportUnnecessaryComparison = true
reportSelfClsParameterName = true
reportMissingTypeArgument = true

[build-system]
# Be careful `build-system` entry works out of poetry,
# hence those dependencies are not resolved & pinned into `poetry.lock`
requires = [
    "poetry-core>=2.0",
    "setuptools",
    "maturin==1.8.7",
    "maturin[patchelf]==1.8.7; platform_system=='Linux'",
    "patchelf~=0.17.2.1; platform_system=='Linux'",
]
build-backend = "poetry.core.masonry.api"
