[project]
name = "parsec-cloud"
version = "3.9.3-a.0+dev"
description = "Secure file sharing in the cloud"
authors = [{ name = "Scille SAS", email = "contact@scille.fr" }]
license = "BUSL-1.1"
readme = "./pypi-readme.md"
keywords = ["parsec", "cryptography", "sharing", "encryption"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
]
requires-python = "~=3.12.0"
dependencies = [
    # Base requirements
    "anyio>=3.7.1, <4",
    "click>=8.0, <9",
    "cryptography>=46.0.6",
    "httpx>=0.28.1, <0.29",
    "pbr>=6.1.1, <7",
    "pydantic>=2.12.4, <3",
    "pydantic-core>=2.41.5, <3",
    "sentry-sdk>=2.30.0, <3",
    "starlette>=0.49.3, <2",
    "structlog>=25.4.0, <26",
    # ASGI server
    "fastapi>=0.121.2, <1",
    "uvicorn>=0.35.0, <0.36",
    "jinja2>=3.0, <4",
    # PostgreSQL
    "asyncpg>=0.29.0, <0.30",
    # S3
    "boto3>=1.42, <2",
    "botocore>=1.42, <2",
    # Swift
    "python-swiftclient>=4.8.0, <5",
]

[project.scripts]
parsec = "parsec.cli:cli"

[project.urls]
homepage = "https://github.com/Scille/parsec-cloud"
documentation = "https://docs.parsec.cloud"

[tool.uv]
# Prevent `uv` from building the server package during `sync` & `run`.
# You can still do `uv build`, `pip install` or `maturin build` ...
package = false
# Not including rust files, since the project "does not depends on it":
# With `package=false`, `uv sync` & `uv run` only install the project dependencies and skip build/installing `parsec_cloud` package.
# https://docs.astral.sh/uv/reference/settings/#cache-keys
cache-keys = [{ file = "pyproject.toml" }]

[dependency-groups]
dev = [
    # build
    "cibuildwheel~=4.0.0",
    "maturin~=1.14.1",
    "patchelf~=0.17.2.4; platform_system=='Linux'",
    "setuptools~=82.0.0",
    # lint
    "deptry~=0.25.1",
    "editorconfig-checker~=3.2.1",
    "pyright~=1.1.353",
    "ruff~=0.15.0",
    "sqlfluff~=4.0.0",
    # test
    "httpx-sse~=0.4.1",
    "pytest~=9.0.1",
    "pytest-asyncio~=1.0",
    "pytest-cov~=7.0.0",
    "pytest-rerunfailures~=16.0",
    "pytest-timeout~=2.2.0",
    "pytest-xdist~=3.1",
    "trustme~=1.2.1",
    # type-stubs
    "asyncpg-stubs~=0.29.1",
    "types-boto3~=1.42.96",
    # used only in misc/test_expected_payload_cooker.py
    # to generate payloads for libparsec protocol serialization tests
    "msgpack~=1.1.2",
    "pynacl~=1.6.2",
]
testbed-server = ["psutil~=7.0.0"]

[tool.cibuildwheel]
build = "cp312-{manylinux,macos,win}*"
archs = ["auto64"]
build-verbosity = 3
before-all = "bash {project}/misc/setup-rust.sh"
before-build = "python -m pip install -U pip"
test-command = "parsec --version"

[tool.cibuildwheel.linux]
# perl-IPC-Cmd needed to build openssl
before-all = "yum install -y perl-IPC-Cmd && bash {project}/misc/setup-rust.sh"
environment-pass = ["MATURIN_PEP517_ARGS"]

[tool.cibuildwheel.environment]
# As its name suggests, `misc/setup-rust.sh` (run during cibuildwheel's before-all) will
# install Rust if it is not already available. In this case, Rust bin dir was previously
# non-existent and hence $PATH don't know about it (and maturin will fail when calling cargo).
# For this reason we force $PATH to contain Rust bin dir.
PATH = "$PATH:$HOME/.cargo/bin"
# A wheel cannot make assumption on the host it is going to run on, hence it
# has to bundle any extra shared libraries dependencies (so in our case openssl)
LIBPARSEC_FORCE_VENDORED_OPENSSL = "true"

[tool.deptry]
extend_exclude = ["server/tests/", "server/parsec/cli/testbed.py"]

# Per-module customization

[tool.pyright]
pythonVersion = "3.12"
include = ["parsec", "tests", "../docs", "../misc", "../bindings/generator"]
exclude = ["**/__pycache__", "../**/.venv/"]
ignore = [
    "parsec/components/postgresql/sequester.py",
    "tests/cli/test_migrate.py",
    "tests/cli/common.py",
    "tests/cli/test_sequester.py",
    "../misc/bench.py",
]
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportUnusedCallResult = "none"
reportUnusedCoroutine = true
reportUnusedExcept = true
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = "information"
reportMatchNotExhaustive = true
reportAssertAlwaysTrue = "information"
reportUnnecessaryComparison = true
reportSelfClsParameterName = true
reportMissingTypeArgument = true

[tool.maturin]
module-name = "parsec._parsec"
bindings = "pyo3"

[build-system]
# Be careful `build-system` entry works out of uv,
# hence those dependencies are not resolved & pinned into `uv.lock`
requires = [
    "maturin>=1.14.1,<2.0", # Need to build rust lib
    # Fix rust lib 3rd lib dependencies
    "maturin[patchelf]>=1.14.1,<2.0; platform_system=='Linux'",
    "patchelf~=0.17.2.1; platform_system=='Linux'",
]
build-backend = "maturin"
