[package]
name = "libparsec_bindings_electron"
version = "0.0.0"
edition = "2021"
exclude = ["index.node"]
license = "BUSL-1.1"

[features]
test-utils = ["libparsec/test-utils"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libparsec = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
neon = { workspace = true, features = ["napi-6", "channel-api", "promise-api"] }
