[package]
name = "libparsec_bindings_electron"
exclude = ["index.node"]
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[features]
test-utils = ["libparsec/test-utils"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libparsec = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
neon = { workspace = true, features = ["napi-6", "channel-api", "promise-api"] }
sentry = { workspace = true, features = ["backtrace", "contexts", "debug-images", "panic", "transport"] }
once_cell = { workspace = true }
