[package]
name = "libparsec"
version = "0.0.0"
edition = "2021"
rust-version = "1.62.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Remember kid: RustCrypto is used if `use-sodiumoxide` is not set !
use-sodiumoxide = [ "libparsec_crypto/use-sodiumoxide" ]
test-utils = [ "libparsec_types/test-mock-time" ]

[dependencies]
libparsec_core = { path = "crates/core" }
libparsec_crypto = { path = "crates/crypto" }
libparsec_client_types = { path = "crates/client_types" }
libparsec_platform_async = { path = "crates/platform_async" }
libparsec_platform_device_loader = { path = "crates/platform_device_loader" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libparsec_protocol = { path = "crates/protocol" }
libparsec_core_fs = { path = "crates/core_fs" }
libparsec_types = { path = "crates/types" }
