[package]
name = "libparsec"
version = "0.0.0"
edition = "2021"
rust-version = "1.62.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Remember kid: RustCrypto is used if `use-sodiumoxide` is not set !
use-sodiumoxide = ["libparsec_crypto/use-sodiumoxide"]
test-utils = ["dep:libparsec_testbed", "libparsec_client_high_level_api/test-utils", "libparsec_platform_device_loader/test-with-testbed", "libparsec_types/test-mock-time", "libparsec_core_fs/test-utils", "dep:libparsec_platform_local_db"]

[dependencies]
libparsec_client_high_level_api = { path = "crates/client_high_level_api" }
libparsec_core = { path = "crates/core" }
libparsec_crypto = { path = "crates/crypto" }
libparsec_client_types = { path = "crates/client_types" }
libparsec_client_connection = { path = "crates/client_connection" }
libparsec_platform_async = { path = "crates/platform_async" }
libparsec_platform_device_loader = { path = "crates/platform_device_loader" }
libparsec_testbed = { path = "crates/testbed", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libparsec_protocol = { path = "crates/protocol" }
libparsec_core_fs = { path = "crates/core_fs" }
libparsec_types = { path = "crates/types" }
libparsec_platform_local_db = { path = "crates/platform_local_db", features = ["test-utils"], optional = true }
