[package]
name = "libparsec_python"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "libparsec._libparsec"

[lib]
name = "libparsec"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
libparsec = { version = "0.1.0", path = "../libparsec" }
# Temporary dependencies
parsec_api_crypto = { path = "../crates/parsec_api_crypto" }
parsec_api_protocol = { path = "../crates/parsec_api_protocol" }
parsec_api_types = { path = "../crates/parsec_api_types", features = ["mock-time"] }
parsec_client_types = { path = "../crates/parsec_client_types" }
parsec_core = { version = "0.0.0", path = "../crates/parsec_core" }
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4", "fast-rng"] }
chrono = {version = "0.4.19", features = ["serde"]}
fancy-regex = "0.8.0"

[dependencies.pyo3]
version = "0.16.0"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
features = ["extension-module", "abi3-py37"]
