[package]
name = "libparsec_python"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "libparsec._libparsec"

[lib]
# "cdylib" is necessary to produce a shared library for `maturin` to be used to generate the python module.
crate-type = ["cdylib"]

[dependencies]
libparsec = { version = "0.1.0", path = "../libparsec", features = ["mock-time"] }

uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
chrono = {version = "0.4.22", features = ["serde"]}
fancy-regex = "0.10.0"

# This crate will never be compiled on platform `wasm32` but when we configure rust-analyzer to target `wasm32`
# It will crash when it try to compile `pyo3` for wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.pyo3]
version = "0.17.1"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
features = ["extension-module", "abi3-py37"]
