[package]
name = "parsec_cli"
version = "0.0.0"
edition = "2021"
license = " BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsec_api_protocol = { path = "../crates/parsec_api_protocol" }

clap = { version = "3.1.8", features = ["derive"] }
serde_json = "1.0.59"

[[bin]]
name = "cli"
path = "src/main.rs"
