[package]
name = "libparsec_account"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
libparsec_client = { workspace = true }
libparsec_client_connection = { workspace = true }
libparsec_types = { workspace = true }
libparsec_platform_async = { workspace = true }
libparsec_platform_device_loader = { workspace = true }
libparsec_protocol = { workspace = true }

thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
libparsec_tests_lite = { workspace = true }
libparsec_tests_fixtures = { workspace = true, features = ["default"] }
