[package]
name = "libparsec_client"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libparsec_client_connection = { workspace = true }
libparsec_types = { workspace = true }
libparsec_platform_async = { workspace = true }
libparsec_platform_storage = { workspace = true }
libparsec_platform_device_loader = { workspace = true }
libparsec_protocol = { workspace = true }

paste = { workspace = true }
log = { workspace = true }

[dev-dependencies]
libparsec_tests_lite = { workspace = true }
libparsec_tests_fixtures = { workspace = true, features=["default"] }
