[package]
name = "libparsec_client"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
libparsec_client_connection = { workspace = true }
libparsec_types = { workspace = true }
libparsec_platform_async = { workspace = true }
libparsec_platform_device_loader = { workspace = true }
libparsec_platform_storage = { workspace = true }
libparsec_protocol = { workspace = true }

paste = { workspace = true }
log = { workspace = true }
sharks = { workspace = true }

[dev-dependencies]
libparsec_tests_lite = { workspace = true }
libparsec_tests_fixtures = { workspace = true, features = ["default"] }
proptest = { workspace = true, features = ["default"] }
proptest-state-machine = { workspace = true }
libparsec_platform_storage = { workspace = true, features = ["expose-test-methods"] }
libparsec_client = {path = ".",features = ["expose-test-methods"]}

[target.'cfg(any(not(target_arch = "wasm32"), target_os = "linux"))'.dependencies]
# TODO: `use-zstd-in-serialization-format` is a temporary feature to disable the
#       use of zstd, as its compilation with WASM is buggy on some host (e.g.
#       MacOS/Windows/Ubuntu 20.04).
#       TL;DR: ALWAYS ENABLE `use-zstd-in-serialization-format` FOR PRODUCTION !!!
libparsec_types = { workspace = true, features = ["use-zstd-in-serialization-format"] }

[features]
expose-test-methods = []
