[package]
name = "libparsec_client"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
expose-test-methods = []

[dependencies]
libparsec_client_connection = { workspace = true }
libparsec_platform_async = { workspace = true }
libparsec_platform_device_loader = { workspace = true }
libparsec_platform_pki = { workspace = true }
libparsec_platform_storage = { workspace = true }
libparsec_protocol = { workspace = true }
libparsec_types = { workspace = true }

paste = { workspace = true }
log = { workspace = true }
blahaj = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
# `alloc` feature is required to properly erase struct containing vec/string
zeroize = { workspace = true, features = ["alloc"] }

[dev-dependencies]
libparsec_tests_lite = { workspace = true }
libparsec_tests_fixtures = { workspace = true, features = ["default"] }
libparsec_platform_pki = { workspace = true, features = ["test-fixture"] }
libparsec_platform_storage = { workspace = true, features = ["expose-test-methods"] }
libparsec_client = { workspace = true, features = ["expose-test-methods"] }

data-encoding = { workspace = true, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Realm export database support is not available on web.
libparsec_platform_realm_export = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Proptest depends on `wait-timeout` which is not available on web.
proptest = { workspace = true, features = ["default"] }
proptest-state-machine = { workspace = true }
# Async stateful test currently relies on Tokio runtime, which is not available on web.
# This is no big deal though, since the tested code is supposed to be platform agnostic.
tokio = { workspace = true, features = ["rt"] }
